Add exercise 3 to jupyter notebook

--- a/Data.Engineering.Exercise.March.2022.ipynb
+++ b/Data.Engineering.Exercise.March.2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "641f4863",
+   "id": "ab44d6c5",
    "metadata": {},
    "source": [
     "# DataEngineeringExercise"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1b540849",
+   "id": "ab7fffd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df60df07",
+   "id": "0abc84cc",
    "metadata": {},
    "source": [
     "### Importing the data into notebook"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "92620b95",
+   "id": "82b67c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cdc338e1",
+   "id": "6a844ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "521c6e16",
+   "id": "1b4e45ac",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "03c956b1",
+   "id": "a123b297",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 414,
-   "id": "d728f8cc",
+   "id": "91f97817",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e6527ba3",
+   "id": "a5df33e7",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e2bd30f",
+   "id": "9241e289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "27365aab",
+   "id": "48824757",
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +252,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 699,
+   "id": "b2a2ebae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19999"
+      ]
+     },
+     "execution_count": 699,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(pat2drug['patient_id'].unique())"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5f91e0ca",
+   "id": "42675dbe",
    "metadata": {},
    "source": [
     "### Translate NDCs between 10- and 11-digit formats"
@@ -262,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 338,
-   "id": "e6d5b23a",
+   "id": "1c5ea0bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "id": "d35b5ad0",
+   "id": "1b51eacb",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 340,
-   "id": "6e749ad3",
+   "id": "1b169231",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45113e24",
+   "id": "e114e7ea",
    "metadata": {},
    "source": [
     "### Convert NDCs into 11- and 10-digit format values"
@@ -368,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 341,
-   "id": "bed8c458",
+   "id": "45b814de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 342,
-   "id": "deccb191",
+   "id": "0303a079",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1eadf34",
+   "id": "34f0148e",
    "metadata": {},
    "source": [
     "### 1. How many patients have been prescribed a medication containing the active ingredient LEVODOPA?"
@@ -479,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "2eda5aaa",
+   "id": "5fcc35ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "7bf28abd",
+   "id": "8580b4f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "bd40f1c5",
+   "id": "e7160b2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "87c6ec11",
+   "id": "7e86f363",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "21db3764",
+   "id": "38510674",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "105c639c",
+   "id": "a13a3cec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 399,
-   "id": "c774f992",
+   "id": "8e1e9854",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "18790a19",
+   "id": "921490d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "6473a884",
+   "id": "18cecc0e",
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "2afa037f",
+   "id": "4053d373",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "0c0fdfcb",
+   "id": "4f1a5dc3",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 649,
-   "id": "ba39f6d7",
+   "id": "446a8d5f",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d631ccca",
+   "id": "85f49974",
    "metadata": {},
    "source": [
     "### 2. How many of the ndc numbers/drug packages can't be found in FDA's database?"
@@ -735,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "7a6c7a72",
+   "id": "18899772",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "1b9d1f24",
+   "id": "e41b9c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 474,
-   "id": "0c0eeb56",
+   "id": "f08e15db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "id": "366489af",
+   "id": "e49eb14b",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 429,
-   "id": "a407371a",
+   "id": "ad1b3e10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "id": "cd6a06d0",
+   "id": "97757803",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 432,
-   "id": "2a376587",
+   "id": "1bf303a9",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6005fb8",
+   "id": "c88e1f74",
    "metadata": {},
    "source": [
     "##### Approach above is very slow due to large number of single queries executed, but brings ground truth! Code below shows optimization by adding more NDCs inside each query step."
@@ -935,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 633,
-   "id": "fa5f38d9",
+   "id": "5cc92fb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 634,
-   "id": "2eee8032",
+   "id": "5af61e8d",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 645,
-   "id": "95ea8385",
+   "id": "67c4cc77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 647,
-   "id": "f509afa0",
+   "id": "3a26b906",
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 650,
-   "id": "1c8d1143",
+   "id": "4f926116",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94da588",
+   "id": "545e7ea6",
    "metadata": {},
    "source": [
     "### 3. Which ten active ingredients are prescribed to most patients and how many patients have been prescribed each of them?"
@@ -1135,15 +1156,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "006ddbfd",
+   "execution_count": 670,
+   "id": "1c7027a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ingre2ndc(json_dat):\n",
+    "    df = pd.DataFrame(\n",
+    "        [(ing['name'],pack['package_ndc']) for rec in json_dat['results'] if 'active_ingredients' in rec for ing,pack in zip(rec['active_ingredients'],rec['packaging']) ],\n",
+    "        columns=['active_ingredient','ndc_10_fda']\n",
+    "    )\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 671,
+   "id": "5cff9615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_url=\"https://api.fda.gov/drug/ndc.json\"\n",
+    "\n",
+    "actingre2ndc = pd.DataFrame([],columns=['ndc_10_pat','ndc_10_fda'])\n",
+    "for i in range(0,len(idx)-1):\n",
+    "    search_url=\"?search=packaging.package_ndc:(\"+\"+OR+\".join(unique_ndcs['ndc_10_pat'][idx[i]:idx[i+1]])+\")&limit=1000\"\n",
+    "    query = f'''{base_url}{search_url}'''\n",
+    "    response = requests.get(query)\n",
+    "    if (response.status_code==200):\n",
+    "        fda_ndc = ingre2ndc(response.json())\n",
+    "        if (ndc2fda2.shape[0]<1):\n",
+    "            actingre2ndc = unique_ndcs[idx[i]:idx[i+1]].merge(\n",
+    "                            fda_ndc,\n",
+    "                            left_on=['ndc_10_pat'],\n",
+    "                            right_on=['ndc_10_fda']\n",
+    "                        ) #.drop_duplicates().sort_values(by='ndc_10_pat').reset_index(drop=True)\n",
+    "        else:\n",
+    "            actingre2ndc = actingre2ndc.append(\n",
+    "                unique_ndcs[idx[i]:idx[i+1]].merge(\n",
+    "                    fda_ndc,\n",
+    "                    left_on=['ndc_10_pat'],\n",
+    "                    right_on=['ndc_10_fda']\n",
+    "                ),\n",
+    "                ignore_index=True #.drop_duplicates().sort_values(by='ndc_10_pat').reset_index(drop=True)\n",
+    "            )\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 672,
+   "id": "9eb22e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ndc_10_pat</th>\n",
+       "      <th>ndc_10_fda</th>\n",
+       "      <th>active_ingredient</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0378-1805-10</td>\n",
+       "      <td>0378-1805-10</td>\n",
+       "      <td>LEVOTHYROXINE SODIUM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0781-2790-01</td>\n",
+       "      <td>0781-2790-01</td>\n",
+       "      <td>OMEPRAZOLE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>68180-468-01</td>\n",
+       "      <td>68180-468-01</td>\n",
+       "      <td>LOVASTATIN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>68382-760-01</td>\n",
+       "      <td>68382-760-01</td>\n",
+       "      <td>METFORMIN HYDROCHLORIDE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57237-233-05</td>\n",
+       "      <td>57237-233-05</td>\n",
+       "      <td>TRIMETHOPRIM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     ndc_10_pat    ndc_10_fda        active_ingredient\n",
+       "0  0378-1805-10  0378-1805-10     LEVOTHYROXINE SODIUM\n",
+       "1  0781-2790-01  0781-2790-01               OMEPRAZOLE\n",
+       "2  68180-468-01  68180-468-01               LOVASTATIN\n",
+       "3  68382-760-01  68382-760-01  METFORMIN HYDROCHLORIDE\n",
+       "4  57237-233-05  57237-233-05             TRIMETHOPRIM"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4938\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(actingre2ndc.head(5))\n",
+    "print(actingre2ndc.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 690,
+   "id": "01489c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top10=[i[0] for i in list(pat2drug.merge(\n",
+    "    actingre2ndc,\n",
+    "    left_on=['ndc_number_10'],\n",
+    "    right_on=['ndc_10_pat']\n",
+    ")[['active_ingredient']].value_counts().sort_values(ascending=False)[0:10].index)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 695,
+   "id": "7ccd61fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pat2ingr = pat2drug.merge(\n",
+    "    actingre2ndc,\n",
+    "    left_on=['ndc_number_10'],\n",
+    "    right_on=['ndc_10_pat']\n",
+    ")[['patient_id','active_ingredient']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 712,
+   "id": "aa736a83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>active_ingredient</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>LEVOTHYROXINE SODIUM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>69</td>\n",
+       "      <td>LEVOTHYROXINE SODIUM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>246</td>\n",
+       "      <td>LEVOTHYROXINE SODIUM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>266</td>\n",
+       "      <td>LEVOTHYROXINE SODIUM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>297</td>\n",
+       "      <td>LEVOTHYROXINE SODIUM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   patient_id     active_ingredient\n",
+       "0           1  LEVOTHYROXINE SODIUM\n",
+       "1          69  LEVOTHYROXINE SODIUM\n",
+       "2         246  LEVOTHYROXINE SODIUM\n",
+       "3         266  LEVOTHYROXINE SODIUM\n",
+       "4         297  LEVOTHYROXINE SODIUM"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(pat2ingr.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 691,
+   "id": "d7aac43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ten active ingredients prescribed to most patients are ['AMLODIPINE BESYLATE', 'ACETAMINOPHEN', 'AMOXICILLIN', 'LEVOTHYROXINE SODIUM', 'ALBUTEROL SULFATE', 'CIPROFLOXACIN HYDROCHLORIDE', 'FLUTICASONE PROPIONATE', 'APIXABAN', 'HYDROCHLOROTHIAZIDE', 'LISINOPRIL']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"The ten active ingredients prescribed to most patients are {top10}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 726,
+   "id": "f13641cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AMLODIPINE BESYLATE            2657\n",
+       "ACETAMINOPHEN                  2318\n",
+       "AMOXICILLIN                    2272\n",
+       "LEVOTHYROXINE SODIUM           2202\n",
+       "ALBUTEROL SULFATE              2027\n",
+       "CIPROFLOXACIN HYDROCHLORIDE    1794\n",
+       "FLUTICASONE PROPIONATE         1665\n",
+       "APIXABAN                       1542\n",
+       "HYDROCHLOROTHIAZIDE            1463\n",
+       "LISINOPRIL                     1339\n",
+       "Name: active_ingredient, dtype: int64"
+      ]
+     },
+     "execution_count": 726,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The table below shows how many times each one of the top 10 ingredients has been prescribed:\n",
+    "pat2ingr['active_ingredient'][pat2ingr['active_ingredient'].isin(top10)].value_counts().sort_values(ascending=False)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "ee338acd",
+   "id": "779b4c5f",
    "metadata": {},
    "source": [
     "### 4. Which ten drugs that are not found in FDA's database are prescribed to highest number of patients, and how many patients have been prescribed each of them?"
@@ -1152,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89a51217",
+   "id": "7ae501eb",
    "metadata": {},
    "outputs": [],
    "source": []
