Add exercise 4 to jupyter notebook

--- a/Data.Engineering.Exercise.March.2022.ipynb
+++ b/Data.Engineering.Exercise.March.2022.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ab44d6c5",
+   "id": "6b1f7aae",
    "metadata": {},
    "source": [
     "# DataEngineeringExercise"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ab7fffd1",
+   "id": "9c14ea79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0abc84cc",
+   "id": "f4c98560",
    "metadata": {},
    "source": [
     "### Importing the data into notebook"
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "82b67c74",
+   "id": "e68ce958",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6a844ab0",
+   "id": "6a136a23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1b4e45ac",
+   "id": "5bc29113",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 413,
-   "id": "a123b297",
+   "id": "636105aa",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 414,
-   "id": "91f97817",
+   "id": "ffa9022a",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a5df33e7",
+   "id": "14599845",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9241e289",
+   "id": "5b4821fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "48824757",
+   "id": "49a6f790",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 699,
-   "id": "b2a2ebae",
+   "id": "4697d0ac",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42675dbe",
+   "id": "f6f556ab",
    "metadata": {},
    "source": [
     "### Translate NDCs between 10- and 11-digit formats"
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 338,
-   "id": "1c5ea0bb",
+   "id": "a91e73db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 339,
-   "id": "1b51eacb",
+   "id": "b3d141ca",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 340,
-   "id": "1b169231",
+   "id": "29ee6720",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e114e7ea",
+   "id": "e28c30d6",
    "metadata": {},
    "source": [
     "### Convert NDCs into 11- and 10-digit format values"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 341,
-   "id": "45b814de",
+   "id": "a7d81fa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 342,
-   "id": "0303a079",
+   "id": "d45e5605",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f0148e",
+   "id": "171fb431",
    "metadata": {},
    "source": [
     "### 1. How many patients have been prescribed a medication containing the active ingredient LEVODOPA?"
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "5fcc35ba",
+   "id": "8c3d51d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "8580b4f2",
+   "id": "3adeca92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "id": "e7160b2d",
+   "id": "95d3f1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "7e86f363",
+   "id": "e829f1d9",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 397,
-   "id": "38510674",
+   "id": "79223cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "a13a3cec",
+   "id": "8d3ca3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 399,
-   "id": "8e1e9854",
+   "id": "da867f2c",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 400,
-   "id": "921490d8",
+   "id": "b191db98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 401,
-   "id": "18cecc0e",
+   "id": "46b682fb",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "4053d373",
+   "id": "4dfa6171",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "4f1a5dc3",
+   "id": "f4ec6157",
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 649,
-   "id": "446a8d5f",
+   "id": "94d21a9e",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85f49974",
+   "id": "66bc1a2b",
    "metadata": {},
    "source": [
     "### 2. How many of the ndc numbers/drug packages can't be found in FDA's database?"
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "id": "18899772",
+   "id": "7e132318",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
-   "id": "e41b9c2c",
+   "id": "145f3e5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 474,
-   "id": "f08e15db",
+   "id": "56f201e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 475,
-   "id": "e49eb14b",
+   "id": "4087a032",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 429,
-   "id": "ad1b3e10",
+   "id": "30b43692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "id": "97757803",
+   "id": "afd676bb",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 432,
-   "id": "1bf303a9",
+   "id": "7c49a34b",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c88e1f74",
+   "id": "439fbfca",
    "metadata": {},
    "source": [
     "##### Approach above is very slow due to large number of single queries executed, but brings ground truth! Code below shows optimization by adding more NDCs inside each query step."
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 633,
-   "id": "5cc92fb0",
+   "id": "47f26682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 634,
-   "id": "5af61e8d",
+   "id": "37abe382",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 645,
-   "id": "67c4cc77",
+   "id": "1bd16ff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 647,
-   "id": "3a26b906",
+   "id": "9d0499c9",
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 650,
-   "id": "4f926116",
+   "id": "9315aa1d",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "545e7ea6",
+   "id": "c96ba9f7",
    "metadata": {},
    "source": [
     "### 3. Which ten active ingredients are prescribed to most patients and how many patients have been prescribed each of them?"
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 670,
-   "id": "1c7027a3",
+   "id": "597cc968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 671,
-   "id": "5cff9615",
+   "id": "3764bd07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": 672,
-   "id": "9eb22e7e",
+   "id": "60d0b57c",
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 690,
-   "id": "01489c30",
+   "id": "8532452a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": 695,
-   "id": "7ccd61fb",
+   "id": "2db9a800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 712,
-   "id": "aa736a83",
+   "id": "b6fa3a9e",
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": 691,
-   "id": "d7aac43f",
+   "id": "8a93a1aa",
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
   {
    "cell_type": "code",
    "execution_count": 726,
-   "id": "f13641cd",
+   "id": "89391efe",
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "779b4c5f",
+   "id": "a4f88302",
    "metadata": {},
    "source": [
     "### 4. Which ten drugs that are not found in FDA's database are prescribed to highest number of patients, and how many patients have been prescribed each of them?"
@@ -1461,8 +1461,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 735,
+   "id": "1eaacce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top10missing=pat2drug[~pat2drug['ndc_number_10'].isin(ndc2fda2['ndc_10_pat'])][['ndc_number_10']].value_counts().sort_values(ascending=False)[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 739,
+   "id": "647ece7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The top 10 drugs prescribed to patients but missing in FDA-db are ['60505-829-01', '62037-830-10', '68180-751-03', '0527-1342-10', '0527-1343-10', '59762-333-02', '62037-831-10', '0527-1345-10', '62037-830-01', '69097-224-16']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\"\"The top 10 drugs prescribed to patients but missing in FDA-db are {[ix[0] for ix in top10missing.index]}\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 741,
+   "id": "89865189",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ndc_number_10\n",
+       "60505-829-01     829\n",
+       "62037-830-10     759\n",
+       "68180-751-03     759\n",
+       "0527-1342-10     675\n",
+       "0527-1343-10     653\n",
+       "59762-333-02     627\n",
+       "62037-831-10     585\n",
+       "0527-1345-10     531\n",
+       "62037-830-01     450\n",
+       "69097-224-16     411\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 741,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The table below shows how many times each one of the top 10 missing drugs has been prescribed to patients:\n",
+    "pat2drug[~pat2drug['ndc_number_10'].isin(ndc2fda2['ndc_10_pat'])][['ndc_number_10']].value_counts().sort_values(ascending=False)[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7ae501eb",
+   "id": "131d947d",
    "metadata": {},
    "outputs": [],
    "source": []
